cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               IMP
version:            0.1.0


Library

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , containers
      ^>= 0.6
    , mtl
    , transformers

  exposed-modules:
      IMP.Syntax
      IMP.Eval

  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  other-modules:
      IMP.Cases
    
  build-depends:
      IMP
    , base
    , QuickCheck
        ^>= 2.13.2
    , tasty
        ^>= 1.2.3
    , tasty-hunit
        ^>= 0.10
    , tasty-quickcheck
        ^>= 0.10
